# llm_access_control

./: .gitignore  LICENSE  pyproject.toml
docs/: README.md
src/: app.py  main.py
src/llm_access_control/: __init__.py  access_manager.py  llm_integration.py  policies.py  utils.py
tests/: test_access_manager.py
