[project]
name = "llm-access-control"
version = "0.1.0"
description = "LLM-based access control system"
authors = [
    {name = "Mamun",email = "mamunur.iut@gmail.com"}
]
readme = "docs/README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "streamlit (>=1.44.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "llm_access_control", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
